# virtual-ohmic-logic-testbench

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  Todos.md  volt.example.inputs.csv  volt.example.json  volt.example.weights.csv
.github/workflows/: cmake-multi-platform.yml  release.yml
docs/: launch-kit-v0.0.2.md
src/: activation.cpp  activation.hpp  adc.cpp  adc.hpp  benchmark.cpp  benchmark.hpp  config.hpp  config_json.cpp  config_json.hpp  crossbar.cpp  crossbar.hpp  dac.cpp  dac.hpp  main.cpp  noise.cpp  noise.hpp  weights_csv.cpp  weights_csv.hpp
tests/: test_core.cpp  test_equivalence.cpp
